@@ -1,3 +1,8 @@
+2011-08-20  Mikael Morin  <mikael.morin@sfr.fr>
+
+	PR fortran/50129
+	* gfortran.dg/where_3.f90: New test.
+
 2011-08-20  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/48739
